forgot to fix alignment of boss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,6 @@ div a:hover {
 #battle-field {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100vw;
 }
 
